services/educs/topology/frontend/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: educs-frontend
spec:
  hostnames:
  - erabliereducoeursucre.com
  parentRefs:
  - name: main-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: educs-backend
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: educs-frontend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: educs-frontend-www-redirect
spec:
  hostnames:
  - www.erabliereducoeursucre.com
  parentRefs:
  - name: main-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: erabliereducoeursucre.com
        statusCode: 301
