services/educs/topology/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: educs-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - erabliereducoeursucre.com
    secretName: educs-frontend-cert
  - hosts:
    - www.erabliereducoeursucre.com
    secretName: www-educs-frontend-cert
  rules:
  - host: erabliereducoeursucre.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: educs-frontend
            port: 
              name: http
  - host: www.erabliereducoeursucre.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: educs-frontend
            port: 
              name: http
